<resources>
    <string name="app_name">Mouse 翻译</string>
    <string name="item_about">关于</string>
    <string name="item_check_update">检查更新</string>
    <string name="item_feedback">意见反馈</string>
    <string name="app_settings">设置</string>
    <string name="et_hint">请输入要翻译的词或句子</string>
    <string name="result">译文</string>
    <string name="invalid_translate">发生了一些不可描述的错误</string>
    <string name="copy_success">复制成功</string>
    <string name="give_me_five">评或不评</string>
    <string name="five">"\n"你评，或者不评我，
                        "\n"我就在那里，
                        "\n"不悲不喜。
                        "\n"你赞，或者不赞我，
                        "\n"赞就在那里，
                        "\n"不增不减。
                        "\n"来酷安给我好评，
                        "\n"或者，
                        "\n"让我住进你的心里。</string>
    <string name="positive">见</string>
    <string name="negative">不见</string>
    <string name="negative_string">让我感谢你，赠我空欢喜</string>
    <string name="positive_string">与君初相识，犹如故人归</string>
    <string name="dic">字典</string>
    <string name="us_phonetic">美 : &#160;</string>
    <string name="en_phonetic">英 : &#160;</string>
    <string name="no_text">输入为空</string>
    <string name="delete_success">删除成功</string>
    <string name="confirm_exit">再点一次退出应用</string>
    <string name="only_support_dic">当前源仅支持查词，请尝试更换翻译源</string>
    <string name="close_night_mode">请先关闭夜间模式</string>
    <string name="notify_name">点击进行快速查词</string>
    <string name="share_intent">com.example.jooff.share</string>
    <string name="source_jinshan">金山 (查词)</string>
    <string name="source_youdao">有道 (翻译 &amp; 查词)</string>
    <string name="source_baidu">百度 (翻译)</string>
    <string name="source_google">谷歌 (翻译)</string>
    <string name="source_yiyun">译云 (翻译)</string>
    <string name="source_shanbei">扇贝 (查词)</string>
</resources>
