<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/app_padding">

        <!--basicTrans card,to show the basic translation of original-->

        <android.support.v7.widget.CardView
            android:id="@+id/content_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_padding"
            android:layout_marginLeft="@dimen/app_padding"
            android:layout_marginRight="@dimen/app_padding"
            android:theme="@style/AppTheme.white"
            android:visibility="gone"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/trans_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/result_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_content_copy_white_24dp"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--dic card,include speech , phonetic explain web explain. -->

        <android.support.v7.widget.CardView
            android:id="@+id/content_dic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/app_padding"
            android:layout_marginRight="@dimen/app_padding"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dic"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/phonetic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/us_phonetic"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        />

                    <TextView
                        android:id="@+id/us_phonetic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>

                    <ImageView
                        android:id="@+id/us_speech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="4dp"
                        android:background="@drawable/m_speech"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/en_phonetic"
                        android:textSize="14sp"
                        android:textStyle="italic"/>

                    <TextView
                        android:id="@+id/uk_phonetic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>

                    <ImageView
                        android:id="@+id/uk_speech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="4dp"
                        android:background="@drawable/m_speech"/>

                </LinearLayout>


                <TextView
                    android:id="@+id/dic_explainEN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:textStyle="italic"
                    android:visibility="gone"
                    />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/dic_explain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/dic_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


